<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageArms"
                android:src="@drawable/arms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageBody"
                android:src="@drawable/body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>
            <ImageView
                android:id="@+id/imageEars"
                android:src="@drawable/ears"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageEyebrows"
                android:src="@drawable/eyebrows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageEyes"
                android:src="@drawable/eyes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageNose"
                android:src="@drawable/nose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageMouth"
                android:src="@drawable/mouth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageHat"
                android:src="@drawable/hat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageMustache"
                android:src="@drawable/mustache"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageShoes"
                android:src="@drawable/shoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageGlasses"
                android:src="@drawable/glasses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/clarif"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkArms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/arms"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkMustache"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mustache"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkNose"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nose"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkEars"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ears"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkEyebrows"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eyebrows"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkEyes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eyes"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkShoes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/shoes"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkGlasses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/glasses"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkHat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hat"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/checkMouth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mouth"
                    android:layout_gravity="center"
                    android:onClick="checkboxClicked"/>
            </FrameLayout>
        </LinearLayout>

</LinearLayout>
</LinearLayout>